k8s/server-deployment.yaml
#express server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec: #behaviour of each pod created
      containers: #lista de containers que o pod deve rodar, neste caso temos apenas 1
        - name: server
          image: stephengrider/multi-server
          ports:
            - containerPort: 5000
