k8s/worker-deployment.yaml
#this deployment is responsible for the fibonacci calculation, that is very heavy computing.
#if anything in this cluster has to be scaled up it will be this deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: stephengrider/multi-worker
