k8s/redis-cluster-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379 #exposition to any outside object trying to get access to redis
      targetPort: 6379 # connects the object inside the container
