k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: #additional configuration optionsa to higher level configuration around the ingress object
    kubernetes.io/ingress.class: 'nginx' #create a ingress controler based on nginx project
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1    #how our copy of nginx behaves, we will remove the /api from incoming traffic but will be redirect to server
spec:
  rules:
    - http:
        paths: #we have two possible traffics
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
